--- a/player.html
+++ b/player.html
@@ -3,15 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Secure Video Player</title>
+  <title>Secure Dynamic Video Player</title>
   <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #000;
+      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .video-container {
+      width: 100%;
+      max-width: 800px;
+      aspect-ratio: 16/9;
+      display: none;
+    }
+    select {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: rgba(255, 255, 255, 0.1);
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      color: #fff;
+      padding: 5px;
+      border-radius: 5px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    #auth-container {
+      text-align: center;
+      z-index: 1000;
+    }
+  </style>
   <script>
+    // Generate MD5 hash (SHA-256 used here)
     function getMD5(input) {
       return crypto.subtle.digest("SHA-256", new TextEncoder().encode(input)).then(buf => {
         return Array.from(new Uint8Array(buf)).map(b => b.toString(16).padStart(2, '0')).join('');
       });
     }
 
+    // Parse URL query parameters
+    function getQueryParams() {
+      const params = {};
+      const queryString = window.location.search.slice(1); // Remove "?"
+      const pairs = queryString.split("&");
+
+      pairs.forEach(pair => {
+        const [key, value] = pair.split("=");
+        if (key && value) {
+          params[key] = decodeURIComponent(value);
+        }
+      });
+      return params;
+    }
+
+    // Check if the entered key is correct
     function checkKey() {
       const keyInput = document.getElementById("key-input").value;
       const today = new Date();
@@ -23,13 +74,45 @@
       getMD5(correctKey).then(hash => {
         let attempts = parseInt(localStorage.getItem("attempts")) || 0;
         if (keyInput === hash) {
-          document.getElementById("video-container").style.display = "block";
           document.getElementById("auth-container").style.display = "none";
+          document.getElementById("video-container").style.display = "block";
           localStorage.removeItem("attempts");
 
-          // Initialize the video.js player after showing the video container
-          var player = videojs('dynamic-video');
-          player.play(); // Start the video automatically if needed
+          // Initialize Video.js player
+          const player = videojs('dynamic-video');
+
+          // Load video sources dynamically
+          const queryParams = getQueryParams();
+          const resolutionSelector = document.getElementById('resolution-selector');
+          const resolutions = Object.keys(queryParams).filter(res => !isNaN(res)).sort((a, b) => a - b);
+
+          if (resolutions.length > 0) {
+            resolutions.forEach((res, index) => {
+              const option = document.createElement('option');
+              option.value = res;
+              option.textContent = `${res}p`;
+              resolutionSelector.appendChild(option);
+
+              // Set default resolution (first in query parameters)
+              if (index === 0) {
+                player.src({ type: 'video/mp4', src: queryParams[res] });
+                player.play();
+              }
+            });
+
+            // Change video source based on selected resolution
+            resolutionSelector.addEventListener('change', (event) => {
+              const selectedResolution = event.target.value;
+              const videoSrc = queryParams[selectedResolution];
+              if (videoSrc) {
+                player.src({ type: 'video/mp4', src: videoSrc });
+                player.play();
+              }
+            });
+          } else {
+            alert('No video sources provided in the URL.');
+          }
+
         } else {
           attempts++;
           localStorage.setItem("attempts", attempts);
@@ -41,10 +124,6 @@
       });
     }
   </script>
-  <style>
-    body { background: #000; color: #fff; text-align: center; font-family: Arial, sans-serif; }
-    #video-container { display: none; }
-  </style>
 </head>
 <body>
   <div id="auth-container">
@@ -52,12 +131,20 @@
     <input type="text" id="key-input" placeholder="Enter key here">
     <button onclick="checkKey()">Submit</button>
   </div>
-  <div id="video-container">
-    <video id="dynamic-video" class="video-js vjs-default-skin" controls preload="auto" width="800" height="450" autoplay>
-      <source src="your-video.mp4" type="video/mp4">
-      Your browser does not support HTML5 video.
+
+  <div class="video-container" id="video-container">
+    <video
+      id="dynamic-video"
+      class="video-js vjs-default-skin"
+      controls
+      preload="auto"
+      style="width: 100%; height: 100%;"
+      data-setup='{}'>
+      <p>Your browser does not support HTML5 video.</p>
     </video>
+    <select id="resolution-selector"></select>
   </div>
+
   <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script>
 </body>
 </html>
