--- a/hxp.html
+++ b/hxp.html
@@ -18,8 +18,10 @@
     }
     .video-container {
       width: 100%;
-      max-width: 800px;
+      max-width: 100%;
+      height: auto;
       aspect-ratio: 16/9;
+      position: relative;
       display: none;
     }
     select {
@@ -33,10 +35,16 @@
       border-radius: 5px;
       font-size: 14px;
       cursor: pointer;
+      z-index: 1000;
     }
     #auth-container {
       text-align: center;
       z-index: 1000;
+    }
+    #dynamic-video {
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* Ensures the video maintains its aspect ratio */
     }
   </style>
   <script>
@@ -139,7 +147,6 @@
       class="video-js vjs-default-skin"
       controls
       preload="auto"
-      style="width: 100%; height: 100%;"
       data-setup='{}'>
       <p>Your browser does not support HTML5 video.</p>
     </video>
