--- a/Test/test.html
+++ b/Test/test.html
@@ -142,7 +142,6 @@
             dropdown.classList.toggle("show-dropdown");
         }
     </script>
-	<script type='text/javascript' src='//pl26150172.effectiveratecpm.com/13/6a/b7/136ab7f2f6179b5c34378332accdf27c.js'></script>
 </head>
 <body>
     <div class="header">
@@ -183,6 +182,8 @@
             <p>All tutors go through a verification process to ensure quality.</p>
         </div>
     </div>
+	<script async="async" data-cfasync="false" src="//pl26151575.effectiveratecpm.com/7d0265c3b5150b599a64e09fe23f0e7c/invoke.js"></script>
+<div id="container-7d0265c3b5150b599a64e09fe23f0e7c"></div>
     <div class="footer">&copy; 2025 Millat Tutors Association. All rights reserved.</div>
 </body>
 </html>
