--- a/Test/test.html
+++ b/Test/test.html
@@ -5,12 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Millat Tutors Association</title>
     <style>
-	/* CSS to show the div as 1px by 1px */
         #container-7d0265c3b5150b599a64e09fe23f0e7c {
-            width: 100px;      /* Set width to 1 pixel */
-            height: 100px;     /* Set height to 1 pixel */
-            overflow: hidden; /* Hide any overflow content */
-            background-color: white; /* Optional: Add a background color for 
+            width: 100px; 
+            height: 100px;     
+            overflow: hidden;  
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
